[package]
name = "rmmm"
version = "0.1.0"
description = "Rust MySQL Migration Manager"
repository = "https://github.com/EasyPost/rmmm"
authors = ["James Brown <jbrown@easypost.com>"]
readme = "README.md"
edition = "2021"
license = "ISC"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = "2"
derive_more = "0.99"
fern = {version = "0.6", features=["colored"]}
itertools = "0.10"
lazy_static = "1"
log = "0.4"
mysql = "21"
regex = "1"
tabled = "0.3"
tempfile = "3"
